# MIPLab-TeamCEE-DeepLearningforBiomed

./: .gitignore  .pre-commit-config.yaml  README.md  links.txt  pyproject.toml  requirements.txt
DATA/: __init__.py
code/: cross_validation.py  interpretability.ipynb  models.py  run.ipynb  run.py  run_cv.py  training.py  utils.py
notebooks/: EGNNA.ipynb  LinearShared.ipynb  LinearSplit.ipynb  SelfAtt.ipynb  Utils.ipynb  bar_plots.ipynb  interpretability-EGNNA.ipynb  interpretability-att.ipynb  interpretability.ipynb  run.ipynb
